# X-RayDent

./: .dockerignore  .gitignore  README.md  env.example  requirements.txt
backend/: .dockerignore  __init__.py  conftest.py  pyproject.toml  run_service_tests.py
backend/services/analysis-service/: Dockerfile  pyproject.toml
backend/services/analysis-service/app/: main.py
backend/services/analysis-service/tests/: test_analysis.py
backend/services/api-gateway/: Dockerfile  pyproject.toml
backend/services/api-gateway/app/: main.py
backend/services/api-gateway/tests/: test_gateway.py
backend/services/auth-service/: Dockerfile  pyproject.toml
backend/services/auth-service/app/: main.py
backend/services/auth-service/tests/: test_auth.py
backend/services/clinic-admin-service/: Dockerfile  pyproject.toml
backend/services/clinic-admin-service/app/: __init__.py  main.py
backend/services/clinic-admin-service/tests/: test_admin.py
backend/services/doctor-service/: Dockerfile  pyproject.toml
backend/services/doctor-service/app/: __init__.py  main.py
backend/services/doctor-service/tests/: test_doctor.py
backend/services/imaging-service/: Dockerfile  pyproject.toml
backend/services/imaging-service/app/: __init__.py  main.py
backend/services/notification-service/: Dockerfile  pyproject.toml
backend/services/patient-service/: Dockerfile  pyproject.toml
backend/services/report-service/: Dockerfile  pyproject.toml
backend/shared/: README.md
backend/shared/app/: __init__.py  events.py  fixtures.py  models.py  settings.py  utils.py
(+99 files in other folders)
