[project]
name = "xraydent-backend"
version = "0.1.0"
description = "Shared backend dependencies for the X-РайДент platform skeleton."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["services"]
